# jupyter-blocks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  turbo.json
.github/workflows/: build.yml  check-release.yml  publish-dev.yml
docs/: architecture.md  blockly_editor.md  blockly_files.md  blocks-reference.md  conf.py  custom-blocks.md  examples.md  getting-started.md  index.rst  installation.md  jupyter-lite.json  jupyter-tidyblocks-features.md  jupyterlab-blockly_architecture.md  jupyterlab_integration.md  kernels.md  modernization-plan.md  other_extensions.md  tidyblocks-features.md  toolbox.md  work-summary.md
docs/inspirations/: tidyblocks-features.md
jupyter_blocks/: CHANGELOG.md  install.json  package.json  pyproject.toml
jupyter_blocks/labextension/: build_log.json  package.json
jupyter_blocks/src/jupyter_blocks/: __init__.py
jupyter_tidyblocks/: CHANGELOG.md  __init__.py  package.json  pyproject.toml
jupyter_tidyblocks/labextension/: build_log.json  install.json  package.json
jupyter_tidyblocks/src/jupyter_tidyblocks/: __init__.py
scripts/: build-local.sh  bump-version.py
